--- a/idm-workshop-1/track.yml
+++ b/idm-workshop-1/track.yml
@@ -1,7 +1,7 @@
 slug: idm-workshop
 id: 2pummbuzqq4i
-title: Identity Management Workshop
-teaser: Learn the basics of Red Hat Identity Manager.
+title: Identity Management Workshop - Part I
+teaser: Learn the basics of Red Hat Identity Management in Red Hat Enterprise Linux.
 description: |
   # Overview:
   Identity Management (IdM) in Red Hat Enterprise Linux provides a centralized and unified way to manage identity stores, authentication, policies, and authorization policies in a Linux-based domain.
@@ -12,27 +12,28 @@ description: |
 
   Configure Identity Manager for users, groups, hosts and services.
 
-  # Concepts included in this scenario:
+  # Concepts included in Workshop - Part I:
 
   * Deploy the Identity Management Server
-  * Enrol a client machine to the realm
+  * Enrolling a client machine to the IdM domain.
   * User management and Kerberos authentication
   * Host based access control (HBAC)
   * Sudo rule management
 
-  # Alternative Labs
+  # Concepts included in Workshop - Part II:
 
+  * Replica installation
   * SELinux user maps
   * Web application authentication and authorization
   * Service certificates
-  * Replica installation
   * SSH user and host key management
   * Kerberos ticket policy
-  * External IdP support
+  * External IdP support (OAuth 2.0 / Cloud Integration )
+
 icon: https://storage.googleapis.com/instruqt-frontend/img/tracks/default.png
 tags: []
 owner: rhel
 developers:
 - parmstro@redhat.com
 show_timer: true
-checksum: "10440479569252573504"
+checksum: "3381897878392317995"
