--- a/satellite-basics-testing/track.yml
+++ b/satellite-basics-testing/track.yml
@@ -1,6 +1,6 @@
 slug: satellite-basics-testing
 id: mo0gftdn3bj8
-title: Satellite Basics Testing
+title: Satellite Basics
 teaser: Learn the basics of using Red Hat Satellite.
 description: |
   # Overview:
@@ -32,6 +32,6 @@ idle_timeout: 2700
 timelimit: 7200
 lab_config:
   overlay: false
-  width: 33
+  width: 50
   position: right
-checksum: "12345678910346673057"
+checksum: "9555097248746669900"
